--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -6,7 +6,7 @@
 .about__brief {
 	background-color: $colour-navy;
 	color: $colour-white;
-	padding: 40px 20px 15px;
+	padding: 40px 25px 15px;
 	vertical-align: middle;
     text-align: left;
 
@@ -22,7 +22,7 @@
 
 .about__bio {
 	background-color: $colour-white;
-	padding: 40px 30px 15px;
+	padding: 40px 25px 15px;
     color: $colour-black;
 
     @include media('>=400px') {
@@ -35,12 +35,28 @@
 		vertical-align: middle;
 	    padding: 80px 40px 55px;
     }
+    @include media('>=1700px') {
+    	padding: 100px 40px 75px;
+    }
 }
 
 .about__intro {
-	@include font-size(18);
-    @include line-height(25);
+	@include font-size(17);
+    @include line-height(22);
 	margin-bottom: $vertical-rhythm;
+
+	@include media('>=400px') {
+		@include font-size(20);
+    	@include line-height(27);
+	}
+	@include media('>=tablet') {
+    	@include font-size(21);
+    	@include line-height(28);
+    }
+	@include media('>=1700px') {
+		@include font-size(23);
+		@include line-height(29);
+	}
 }
 
 /*.about__keypoints,
@@ -75,38 +91,46 @@
 }
 
 .about__keypoint {
-	@include font-size(18);
-    @include line-height(24);
+	@include font-size(17);
+    @include line-height(22);
     margin-bottom: 30px;
 
     @include media('>=400px') {
     	@include font-size(20);
     	@include line-height(27);
     }
-
     @include media('>=tablet') {
     	@include font-size(23);
     	@include line-height(27);
     }
+    @include media('>=1700px') {
+    	@include font-size(24);
+    	@include line-height(29);
+    }
 }
 
 .about__bullet {
-	display: inline-block;
+	@include font-size(20);
+	display: none;
 	vertical-align: middle;
-	width: 20px;
-	margin-right: 5px;
-	@include font-size(16);
-
+	margin-right: 10px;
+	height: 30px;
+    width: 23px;
+	stroke: white;
+    fill: none;
+    
 	@include media('>=400px') {
-		margin-right: 10px;
-		@include font-size(20);
+		display: inline-block;
 	}
 }
 
 .about__bullet-text {
 	display: inline-block;
 	vertical-align: middle;
-	width: calc(100% - 40px);
+
+	@include media('>=400px') {
+		width: calc(100% - 40px);
+	}
 }
 
 .about__reason {
