--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
 	background-color: $colour-white;
 	position: relative;
+	padding: 15px 0 0;
 
 	@include media('>=tablet') {
 		background-image: url('../img/bg__hero--desktop.jpg');
@@ -8,6 +9,7 @@
 		background-size: cover;
 		background-position-x: right;
 		height: 600px;
+		paddding: 0;
 	}
 
 	@include media('>=desktop') {
@@ -27,10 +29,9 @@
     padding: 30px 25px;
     background: $colour-white;
     border-radius: 5px;
-
-    @include media('>=500px') {
-        padding: 50px 40px;
-    }
+    max-width: 500px;
+    margin: 0 auto 20px;
+    text-align: center;
 
 	@include media('>=tablet') {
 		position: relative;
@@ -39,20 +40,19 @@
 	   	width: 50%;
 	    padding: 40px;
 	    margin: 0 20px;
-	    opacity: 0.85;
-	}
-
-	@include media('>=1000px') {
-		 opacity: 0.95;
+	    opacity: 0.9;
+	    max-width: none;
+	    filter: drop-shadow(-2px 0px 3px rgba(0, 0, 0, 0.4));
 	}
 
 	@include media('>=desktop') {
 		width: 42%;
 		margin: 0 70px;
+		text-align: left;
 	}
-	@include media('>=1700px') {
+	@include media('>=1600px') {
 		width: 38%;
-		margin: 0 100px;
+		margin: 0 100px 0 200px;
 		padding: 60px;
 	}
 	@include media('>=1800px') {
@@ -87,7 +87,7 @@
 	}
 
 	@include media('>=tablet') {
-		margin-bottom: 25px;
+		margin-bottom: 20px;
 	}
 
 	@include media('>=1700px') {
@@ -106,11 +106,11 @@
 	@include media('>=400px') {
 		@include font-size(40);
     	@include line-height(40);
-    	margin-bottom: 10px;
+    	// margin-bottom: 10px;
 	}
 
 	@include media('>=tablet') {
-		margin-bottom: 25px;
+		margin-bottom: 20px;
 	}
 
 	@include media('>=1700px') {
@@ -134,13 +134,13 @@
     }
 }
 
-.icn__arrow-down {
-	position: absolute;
-	bottom: 10px;
-	left: 50%;
-	margin-left: -30px;
-	height: 60px;
-	width: 60px;
-	stroke: white;
-	fill: none;
-}
+// .icn__arrow-down {
+// 	position: absolute;
+// 	bottom: 10px;
+// 	left: 50%;
+// 	margin-left: -30px;
+// 	height: 60px;
+// 	width: 60px;
+// 	stroke: white;
+// 	fill: none;
+// }
